Fixed z-index for h2 of articles

--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,7 @@ body {
 */
 header {
   color: #ffffff;
+  z-index: 1;
 }
 header .nav-container {
   color: inherit;
@@ -459,6 +460,12 @@ article {
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
+}
+article img {
+  z-index: -2;
+}
+article h2 {
+  z-index: -1;
 }
 article.small {
   display: flex;
