--- a/less/article.less
+++ b/less/article.less
@@ -5,6 +5,12 @@
 */
 article {
     .flex(space-between);
+    img {
+        z-index: -2;
+    }
+    h2 {
+        z-index: -1;
+    }
     &.small {
         display: flex;
         align-items: center;
