--- a/less/header.less
+++ b/less/header.less
@@ -5,6 +5,7 @@
 */
 header {
     color: #ffffff;
+    z-index: 1;
     .nav-container {
         .text(@size: 2.4rem, @weight: 1000);
         background-color: #98A2AE;
